--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+/multithreading-onderzoek/nbproject/private/
