--- a/clash-of-fishes-server/nbproject/project.properties
+++ b/clash-of-fishes-server/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.netgames.clashoffishes.server.ClashOfFishesServer
+main.class=com.netgames.clashoffishes.server.ui.ClashOfFishesServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
